--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -10,7 +10,7 @@ env:
 jobs:
 
   test:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
 
     steps:
     - uses: actions/checkout@v3
@@ -32,7 +32,7 @@ jobs:
     - name: Setup Python 3.8
       uses: actions/setup-python@v4
       with:
-        python-version: 3.8.12
+        python-version: 3.8.10
 
     - name: Install Requirements
       run: |
